# Cipherchat

./: .gitignore  ANCHOR_SETUP.md  Anchor.toml  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SCRIPTS.md  SETUP.md  TYPESCRIPT_ERRORS.md  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
components/: WalletButton.tsx  index.ts
components/providers/: WalletProvider.tsx
lib/: cipherchat-client.ts  encryption.ts  solana.ts
programs/cipherchat/: Cargo.toml  README.md
programs/cipherchat/src/: lib.rs
tests/: cipherchat.ts  tsconfig.json
types/: index.ts  modules.d.ts
