[package]
name = "cipherchat"
version = "0.1.0"
description = "End-to-end encrypted messaging on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cipherchat"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
